2008-02-12  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-texture.c (texture_update_data):
	Fixed incorrect aligment of texture data.

2008-02-12  Tomas Frydrych  <tf@openedhand.com>

	* clutter/x11/clutter-event-x11.c (event_translate):
	Ignore events not directed at the stage window once they have been
	passed to the filter functions.

2008-02-11  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
        Minor documentation tweak to class description.

	* clutter/clutter-behaviour-scale.c:
        'Force' start + end vals of scale behaviour
        (#779, Havoc Pennington)

2008-02-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* README:
	* NEWS: Release 0.5.6

	* configure.ac: Post release bump to 0.5.7.

	* clutter/clutter-behaviour-scale.c:
	* tests/test-fbo.c: Fix compilation warnings.

2008-02-11  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.c (clutter_actor_transform_stage_point):
	Moved part of the calculation to floating point to avoid overflow
	of ClutterFixed range for large actors (bug 613).

2008-02-10  Matthew Allum    <mallum@o-hand.com>

        * clutter/osx/clutter-stage-osx.c
	Fix up a couple of typos breaking build.

2008-02-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Add actor box diagram and notes.

2008-02-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-path.c: Move the nice graph and
	description from the Path behaviour...

	* clutter/clutter-behaviour.c: ... to the main Behaviour class.

2008-02-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-path.c: Add a paragraph describing
	the effects of different alpha functions on the path behaviour.

2008-02-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Reference the newly added event-flow.png

	* clutter/clutter-alpha.c: Ditto, with alpha-func.png

	* clutter/clutter-texture.c: Fix the XML.

2008-02-08  Emmanuele Bassi  <ebassi@openedhand.com>