@@ -1,6 +1,12 @@
 2008-02-12  Tomas Frydrych  <tf@openedhand.com>
 
 	* clutter/clutter-texture.c (texture_update_data):
+	Fixed incorrect calculation of offset into texture data (needs to
+	use width of the texture, not of the updated area).
+
+2008-02-12  Tomas Frydrych  <tf@openedhand.com>
+
+	* clutter/clutter-texture.c (texture_update_data):
 	Fixed incorrect aligment of texture data.
 
 2008-02-12  Tomas Frydrych  <tf@openedhand.com>
